# cpp-proxy

./: .gitignore  CMakeLists.txt
examples/: echo_server.cpp  echo_with_connection_manager.cpp  fd_phase1_test.cpp
src/connection/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  connection_state.h
src/core/buffer/: buffer.cpp  buffer.h
src/core/event_loop/: epoll_loop.cpp  epoll_loop.h
src/core/fd/: fd_wrapper.cpp  fd_wrapper.h
src/core/socket/: acceptor.cpp  acceptor.h  socket.cpp  socket.h
src/internal/: invariants.md
src/protocol/http/: http_parser.cpp  http_parser.h
tests/unit/: http_parser_test.cpp
